--- a/Modulo 2/Ejercitación Módulo 2 - part3 corregidos.ipynb
+++ b/Modulo 2/Ejercitación Módulo 2 - part3 corregidos.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "1c4821ce",
    "metadata": {},
    "outputs": [
@@ -57,53 +57,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el valor outliers es 55\n"
+      "el o los valoes outliers son: [-607, 655, 789, 3444, 6909]\n"
      ]
     }
    ],
    "source": [
     "### Resolución ejercicio 3.1\n",
     "##TO DO\n",
-    "lita=[55,55,66,36,54,58,93,30,26,49,79,73,34,3444,20000]\n",
+    "lita=[55,55,66,36,54,58,93,30,26,49,79,73,34,789,655,3444,6909,5,4,6,1,-607]\n",
     "    \n",
     "def outlie(lita):\n",
-    "    sorted(lita)\n",
+    "    lita.sort()\n",
     "    med= sum(lita)/len(lita)\n",
-    "    q11= (len(lita)+1)//4\n",
-    "    q31= (3*(len(lita)+1))//4\n",
-    "    q1= lita[q11]\n",
-    "    q2= lita[q31]\n",
+    "    q1= lita[(len(lita)+1)//4]\n",
+    "    q2= lita[(3*(len(lita)+1))//4]\n",
     "    RIC= q2-q1\n",
+    "    lista2=[]\n",
     "    for i in lita:\n",
-    "        if lita !=0 and i<(q1-1.5*RIC) or i>(q2+1.5*RIC):\n",
-    "            return f\"el valor outliers es {i}\"\n",
-    "        elif lita==0:\n",
-    "            return None\n",
-    "print(outlie(lita))   \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "745936ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 11 37 36 73 3444\n"
-     ]
-    }
-   ],
-   "source": [
-    "lita=[55,55,66,36,54,58,93,30,26,49,79,73,34,3444]\n",
-    "q11= (len(lita)+1)//4\n",
-    "q31= (3*(len(lita)+1))//4\n",
-    "q1= lita[q11]\n",
-    "q3=lita[q31]\n",
-    "RIC= q3-q1\n",
-    "print(q11, q31, RIC, q1, q3, lita[13])\n"
+    "        if i<(q1-(1.5*RIC)) or i>(q2+(1.5*RIC)):\n",
+    "            lista2.append(i)\n",
+    "    return lista2\n",
+    "print(f\"el o los valoes outliers son: {outlie(lita)}\")   "
    ]
   },
   {
@@ -142,46 +116,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero: 1\n",
-      "ingrese y o n para continuar o terminar: y\n",
-      "ingrese un numero: 1\n",
-      "ingrese y o n para continuar o terminar: y\n",
-      "ingrese un numero: 2\n",
-      "ingrese y o n para continuar o terminar: n\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'listanumeros' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9252/4145663437.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mresultado\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"la lista con los numeros {list} es: {listanumeros(list)}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'listanumeros' is not defined"
+      "20\n"
      ]
     }
    ],
    "source": [
     "### Resolución ejercicio 3.2\n",
-    "### TO DO\n",
-    "list=[]\n",
-    "while True:\n",
-    "    n1=int(input (\"ingrese un numero: \"))\n",
-    "    seguir= input(\"ingrese y o n para continuar o terminar: \")\n",
-    "    list.append(n1)\n",
-    "    if seguir == \"y\":\n",
-    "        \n",
-    "        continue\n",
-    "    elif seguir ==\"n\":\n",
-    "        break\n",
-    "def suma(list):\n",
-    "    resultado = 0\n",
-    "    for i in num:\n",
-    "        resultado += i\n",
-    "    return resultado\n",
-    "\n",
-    "print(f\"la lista con los numeros {list} es: {listanumeros(list)}\")"
+    "### aTO DO\n",
+    "lista=[2,3,4,5,6]\n",
+    "def suma(*args):\n",
+    "    return sum(i for i in lista)\n",
+    "print(suma(lista))"
    ]
   },
   {
@@ -198,15 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5d6702f8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[24.38237297859371, 38.754325259515575, 33.694937541091385, 24.740937287102444, 20.15621063240111, 16.579940822365064]\n"
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9720/1754664385.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mproduct\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpeso\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maltura\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#aplico lambda como pide la letra\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#product = [x/(y*y) for x,y in zip(peso,altura)]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{i for i in product():.2f}\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#formateo la lista para que me de solo 2 decimales (Solucinar)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;31m#print(product)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
      ]
     }
    ],
@@ -215,7 +164,9 @@
     "### TO DO\n",
     "altura = [1.67,1.70,1.56,1.67,1.89,1.98]\n",
     "peso = [68,112,82,69,72,65]\n",
-    "product = [x/(y*y) for x,y in zip(peso,altura)]\n",
+    "product = list(map(lambda x,y: x/y**2, peso, altura)) #aplico lambda como pide la letra\n",
+    "#product = [x/(y*y) for x,y in zip(peso,altura)]\n",
+    "#print(f\"{i for i in product():.2f}\") #formateo la lista para que me de solo 2 decimales (Solucinar)\n",
     "print(product)"
    ]
   },
@@ -237,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "6d787c0d",
    "metadata": {},
    "outputs": [
@@ -245,35 +196,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "menu: 1 - suma; 2 - resta; 3 - division; 4- multiplicacion\n",
-      "ingrese que tipo de operacion desea realizar segun el menu: sumar\n",
-      "ingrese un valor: 5\n",
-      "ingrese el segundo valor: 5\n",
-      "la operacion seleccionada dio como resultado 0\n"
+      "menu: ingrese 1  para suma; ingrese 2  para resta, ingrese 3  para division, ingrese 4  para multiplicacion\n",
+      "ingrese que tipo de operacion desea realizar segun el menu: 4\n",
+      "ingrese un valor: 3\n",
+      "ingrese el segundo valor: 2\n",
+      "la operacion seleccionada dio como resultado: 6\n"
      ]
     }
    ],
    "source": [
     "### Resolución ejercicio 3.4\n",
     "### TO DO\n",
-    "print (\"menu: 1 - suma; 2 - resta; 3 - division; 4- multiplicacion\")\n",
-    "tipo= input(\"ingrese que tipo de operacion desea realizar segun el menu: \")\n",
-    "\n",
+    "print (\"menu: ingrese 1  para suma; ingrese 2  para resta, ingrese 3  para division, ingrese 4  para multiplicacion\")\n",
+    "tipo= int(input(\"ingrese que tipo de operacion desea realizar segun el menu: \"))\n",
+    "\"\"\"\"\n",
+    "comenzamos planteando el menu de opciones y luego el valor seleccionado por el menu\n",
+    "\"\"\"\"\n",
     "n1= int(input(\"ingrese un valor: \"))\n",
     "n2= int(input(\"ingrese el segundo valor: \"))\n",
-    "\n",
+    "\"\"\"\"\n",
+    "pedimos que ingrese los valores valores\n",
+    "\"\"\"\"\n",
     "def mathOperations(n1,n2):\n",
     "    n3=0\n",
-    "    if tipo== \"1\":\n",
+    "    if tipo== 1:\n",
     "        n3=n1+n2\n",
-    "    elif tipo == \"2\":\n",
+    "    elif tipo == 2:\n",
     "        n3= n1-n2\n",
-    "    elif tipo == \"3\":\n",
+    "    elif tipo == 3:\n",
     "        n3= n1/n2\n",
-    "    elif tipo == \"4\":\n",
+    "    elif tipo == 4:\n",
     "        n3= n1*n2\n",
+    "    else:\n",
+    "        return \"no ingreso el dato correcto en el menu, las opciones correctas son 1, 2, 3, 4\"\n",
     "    return n3\n",
-    "print(f\"la operacion seleccionada dio como resultado {mathOperations(n1,n2)}\")"
+    "\"\"\"\"\n",
+    "con esta funcion realizamos las operaciones para devlver lo requerido en el menu\n",
+    "\"\"\"\"\n",
+    "print(f\"la operacion seleccionada dio como resultado: {mathOperations(n1,n2)}\")"
    ]
   },
   {
@@ -298,67 +258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8b80fb8c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ingrese un valor N para realizar las aproximaciones: 10000\n",
-      "la sumatoria da: 3.000000000002074\n"
-     ]
-    }
-   ],
-   "source": [
-    "## Resolución Ejercicio 3.5\n",
-    "##TO DO\n",
-    "num= float(input(\"ingrese un valor N para realizar las aproximaciones: \"))\n",
-    "\n",
-    "def pi(num):\n",
-    "    k=0\n",
-    "    i=num\n",
-    "    kk=0\n",
-    "    lista=[]\n",
-    "    while k<=num:\n",
-    "        kk=((-1)**k)*(1/(i*(i+1)*(i+2)))\n",
-    "        lista.append(kk)\n",
-    "        k+=1\n",
-    "        i+=2\n",
-    "    suma= sum(lista)\n",
-    "    numpi= 3+(4*suma)\n",
-    "    return numpi\n",
-    "print(f\"la sumatoria da: {pi(num)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1615802c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.141592653589793"
+       "3.1396825396825396"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## Resolución Ejercicio 3.5\n",
-    "\n",
     "##TO DO\n",
-    "\n",
-    "N = 100000\n",
+    "N = 9\n",
     "f = lambda n,k: ((-1)**k)*(1/(n*(n+1)*(n+2)))\n",
     "pi = 3 + 4*sum([f(n,k) for n,k in zip((range(2,N,2)), range(0,N))])\n",
     "pi\n",
-    "\n",
     "## Nota, podríamos haber hecho\n",
     "## pi = 3 + 4*sum([(lambda n,k: ((-1)**k)*(1/(n*(n+1)*(n+2))))(n,k) for n,k in zip((range(2,N,2)), range(0,N))])\n",
     "## pero poner la función lambda dentro de la listComps puede resultar confuso cuando es muy extensa"
@@ -382,28 +303,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b81b07f0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'tomy suarez'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "introducir Mensaje: jqnc okngpc, eqoq guvcu?\n",
+      "ingrese el numero de movimientos a realizar [1-26]: 2\n",
+      "ingrese el modo, 1 para cifrar y 2 para descifrar: 2\n",
+      "el mensaje cifrado es: hola milena, como estas?\n"
+     ]
     }
    ],
    "source": [
     "## Resolución Ejercicio 3.6\n",
     "##TO DO\n",
     "\n",
-    "# mensaje = input(\"introducir Mensaje: \")\n",
-    "# mov = int(input(\"ingrese el numero de movimientos a realizar [1-26]: \"))\n",
-    "# modo= int(input(\"ingrese el modo, 1 para cifrar y 2 para descifrar: \"))       \n",
+    "mensaje = input(\"introducir Mensaje: \")\n",
+    "mov = int(input(\"ingrese el numero de movimientos a realizar [1-26]: \"))\n",
+    "modo= int(input(\"ingrese el modo, 1 para cifrar y 2 para descifrar: \"))     \n",
+    "\n",
+    "\"\"\"\"\n",
+    "Pedimos ingresar el mensaje, cuantos movimientos debe desplazarse la oracion y si desea cifrar o descifrar\n",
+    "\"\"\"\"\n",
+    "\n",
     "def codificar(mensaje, mov):\n",
     "    trans = \"\"\n",
     "    letras= \"abcdefghijklmnopqrstuvwxyz\"\n",
@@ -419,7 +345,9 @@
     "        else:\n",
     "            trans += simbol\n",
     "    return trans\n",
-    "\n",
+    "\"\"\"\"\n",
+    "Esta funcion nos codifica el mensaje ingresado anteriormente \n",
+    "\"\"\"\"\n",
     "def decodificar(mensaje, mov):\n",
     "    trans = \"\"\n",
     "    letras= \"abcdefghijklmnopqrstuvwxyz\"\n",
@@ -435,13 +363,13 @@
     "        else:\n",
     "            trans += simbol\n",
     "    return trans\n",
-    "# if modo == 1:\n",
-    "#     print(f\"el mensaje cifrado es: {codificar(mensaje, mov)}\")\n",
-    "# elif modo==2:\n",
-    "#     print(f\"el mensaje cifrado es: {decodificar(mensaje, mov)}\")\n",
-    "\n",
-    "codificar(\"tomy suarez\", 3)\n",
-    "decodificar('wrpb vxduhc',3)"
+    "\"\"\"\"\n",
+    "Esta funcion nos decodifica el mensaje ingresado anteriormente \n",
+    "\"\"\"\"\n",
+    "if modo == 1:\n",
+    "    print(f\"el mensaje cifrado es: {codificar(mensaje, mov)}\") #si la opcion de modo es 1 entonces se codificara el mensaje\n",
+    "elif modo==2:\n",
+    "    print(f\"el mensaje cifrado es: {decodificar(mensaje, mov)}\")#si la opcion de modo es 2 entonces se decodificara el mensaje"
    ]
   },
   {
@@ -485,14 +413,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "31709ffa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese su apuesta (0-36): 1\n",
+      "su apuesta es correcta? (y/n): y\n",
+      "su apuesta es: 1\n",
+      "generando numero ganador...\n",
+      "su numero es: 1 y el numero ganador es: 1\n"
+     ]
+    }
+   ],
    "source": [
     "## Resolución Ejercicio 3.7\n",
     "##TO DO\n",
-    "import random\n"
+    "import random\n",
+    "numRojos=[2,4,6,8,10,11,13,15,17,20,22,24,26,28,29,31,33,35]\n",
+    "numNegros=[1,3,5,7,9,12,14,16,18,19,21,23,25,27,30,32,34,36]\n",
+    "numVerde=[0]\n",
+    "while True:\n",
+    "    apuesta=int(input(\"ingrese su apuesta (0-36): \"))\n",
+    "    confirmar= input(\"su apuesta es correcta? (y/n): \")\n",
+    "    if confirmar ==\"y\":\n",
+    "        print(f\"su apuesta es: {apuesta}\")\n",
+    "        break\n",
+    "    elif confirmar ==\"n\":\n",
+    "        continue\n",
+    "def rando():\n",
+    "    ganador= random.randint(0,1)\n",
+    "    return ganador\n",
+    "print(\"generando numero ganador...\")\n",
+    "print(f\"su numero es: {apuesta} y el numero ganador es: {rando()}\")\n",
+    "if rando() == apuesta:\n",
+    "    if rando()%2==0:\n",
+    "        print(\"pagar pares\")\n",
+    "    elif rando()%2!=0:\n",
+    "        print(\"pagar impares\")\n",
+    "    if rando() == numRojos:\n",
+    "        print(\"pagar rojos\")\n",
+    "    elif rando() == numNegros:\n",
+    "        print(\"pagar negros\")\n",
+    "    if rando()<18 and rando()!=0:\n",
+    "        print(\"pagar 1 a 18\")\n",
+    "    elif rando()>19 and rando()<36:\n",
+    "        print(\"pagar 19 a 36\")\n",
+    "else:\n",
+    "    print(\"gana la casa\")\n",
+    "#como puedo comprar todo para que mande los mensajes en cadena"
    ]
   },
   {
@@ -552,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "id": "ea952473",
    "metadata": {
     "scrolled": true
@@ -647,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "fc28012e",
    "metadata": {},
    "outputs": [
@@ -655,8 +627,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero para estimar su raiz cuadrada: 25\n",
-      "su raiz cuadrada es: 13.0\n"
+      "ingrese un numero para estimar su raiz cuadrada: 666\n",
+      "su raiz cuadrada es: 25.80697580112788\n"
      ]
     }
    ],
@@ -665,12 +637,15 @@
     "##TO DO\n",
     "numeroR= float(input(\"ingrese un numero para estimar su raiz cuadrada: \"))\n",
     "def raiz(numeroR):\n",
-    "    n=0\n",
+    "    x=1\n",
     "    i=0\n",
     "    while i<=10:\n",
-    "        n= (numeroR+(numeroR/numeroR))/2\n",
+    "        x= (x+(numeroR/x))/2\n",
     "        i+=1\n",
-    "    return n\n",
+    "    return x\n",
+    "\"\"\"\n",
+    "Esta funcion implementa el metodo de hallazgo de la raiz cuadrada de newton mediante aproximaciones.\n",
+    "\"\"\"\n",
     "print(f\"su raiz cuadrada es: {raiz(numeroR)}\")"
    ]
   },
@@ -759,32 +734,6 @@
     "<hr style=\"border:1px solid gray\"> </hr>\n",
     "\n",
     "##  <span style='color:#3A40A2 '>FIN</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f0137fb1",
-   "metadata": {},
-   "source": [
-    "Te paso comentarios de los ejercicios.\n",
-    "\n",
-    "- <span style='color:red'> 3.1 - No funciona correctamente. Debe devolverse una lista con los outliers.</span>\n",
-    "- <span style='color:red'> 3.2 - No funciona correctamente.</span>\n",
-    "- 3.3 - OK: Para la próxima formatea la salida para que queden como mucho dos decimales.\n",
-    "- <span style='color:red'> 3.4 - No funciona correctamente.</span>\n",
-    "- <span style='color:red'>3.5 - No funciona: Te deje una respuesta alternativa</span>\n",
-    "- <span style='color:green'> 3.6 - Esta OK. Intenta no rebuscartela tanto con el tema del ingreso por teclado.</span>\n",
-    "- <span style='color:red'> 3.7 - No está implementado.</span>\n",
-    "- <span style='color:red'> 3.8 - No está implementado.</span>\n",
-    "- 3.9 - OK\n",
-    "- <span style='color:red'> 3.10 - No está implementado.</span>\n",
-    "- <span style='color:red'> 3.11 - No funciona correctamente.</span>\n",
-    "- <span style='color:red'> 3.12 - No funciona correctamente.</span>\n",
-    "- <span style='color:red'> 3.13 - No funciona correctamente.</span>\n",
-    "\n",
-    "Falta la documentación en las funciones que se piden. Repasar docstring.\n",
-    "\n",
-    "Tu calificación es **30**."
    ]
   }
  ],
